[Track]: 📈Add user activity logging

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,4 +3,21 @@
 {% block extrahead %}
     {{ super() }}
     <script src="{{ 'js/pdf-loader.js' | url }}"></script>
+
+    <!-- Matomo -->
+    <script>
+        var _paq = _paq || [];
+        _paq.push(["trackPageView"]), _paq.push(["enableLinkTracking"]),
+        function() {
+        _paq.push(["setTrackerUrl", "https://stats.hxwu.top/nhtjxxx.php"]);
+        _paq.push(["setSiteId", "1"]);
+        _paq.push(['disableAlwaysUseSendBeacon', 'true']);
+        var a = document, r = a.createElement("script"), s = a.getElementsByTagName("script")[0];
+            r.async = !0, r.defer = !0, r.src = "https://stats.hxwu.top/xejydwx.php", s.parentNode.insertBefore(r, s)
+        }();
+    </script>
+    <noscript><img src="https://stats.hxwu.top/nhtjxxx.php?wpa=1&nfs=1" height="0" width="0" alt=""/></noscript>
+    <!-- End Matomo Code -->
+
+
 {% endblock %}
